docs: update README for server-to-browser serialization benchmark with comprehensive details and improved structure